force-app/main/default/objects/Account/fields/A_P_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>A_P_Contact_Name__c</fullName>
    <inlineHelpText>Please enter First and Last Name</inlineHelpText>
    <label>A/P Contact Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>