force-app/main/default/objects/Account/fields/Account_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Account_at_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account at Risk</label>
    <type>Checkbox</type>
</CustomField>