force-app/main/default/objects/Account/fields/Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance__c</fullName>
    <label>Account Balance</label>
    <summarizedField>Statement__c.Statement_Total__c</summarizedField>
    <summaryForeignKey>Statement__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>