force-app/main/default/objects/Account/fields/Account_Cleanup_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Cleanup_Notes__c</fullName>
    <description>used by Jeff</description>
    <label>Account Cleanup Notes</label>
    <type>TextArea</type>
</CustomField>