force-app/main/default/objects/Account/fields/Account_ID_Casesafe__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_Casesafe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID (Casesafe)</label>
    <type>Text</type>
</CustomField>