force-app/main/default/objects/Account/fields/Account_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_2__c</fullName>
    <inlineHelpText>Additional name details such as &quot;care of&quot;, &quot;doing business as&quot; or &quot;store number&quot;.  This field is also used as the overflow for the 50 character limits from the Account Name.</inlineHelpText>
    <label>Additional Account Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>