force-app/main/default/objects/Account/fields/AccPac_Account__c.field-meta.xml
<CustomField>
    <fullName>AccPac_Account__c</fullName>
    <externalId>true</externalId>
    <label>AccPac Account #</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>