force-app/main/default/objects/Account/fields/Accpac_Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Accpac_Customer_Group__c</fullName>
    <label>Accpac Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0000 NATIONAL - CND$</fullName>
            </value>
            <value>
                <fullName>1110 TORONTO - CND$</fullName>
            </value>
            <value>
                <fullName>1120 LONDON - CND$</fullName>
            </value>
            <value>
                <fullName>1130 OTTAWA - CND$</fullName>
            </value>
            <value>
                <fullName>1210 MONTREAL - CND$</fullName>
            </value>
            <value>
                <fullName>1220 QUEBEC CITY - CND$</fullName>
            </value>
            <value>
                <fullName>1230 TROIS-RIVIERES - CND$</fullName>
            </value>
            <value>
                <fullName>1310 VANCOUVER - CND$</fullName>
            </value>
            <value>
                <fullName>1410 CALGARY - CND$</fullName>
            </value>
            <value>
                <fullName>1420 EDMONTON - CND$</fullName>
            </value>
            <value>
                <fullName>1160 MISSISSAUGA - CND$</fullName>
            </value>
            <value>
                <fullName>TMX1 TMX AR GROUP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>