force-app/main/default/objects/Account/fields/AccPac_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>AccPac_Error_Description__c</fullName>
    <label>AccPac Error Description</label>
    <type>TextArea</type>
</CustomField>