force-app/main/default/objects/Account/fields/AccPac_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>AccPac_Integration_Status__c</fullName>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready to be sent to AccPac</fullName>
            </value>
            <value>
                <fullName>Sent to Staging Table</fullName>
            </value>
            <value>
                <fullName>Synced with AccPac</fullName>
            </value>
            <value>
                <fullName>Error pushing to AccPac</fullName>
            </value>
            <value>
                <fullName>Do Not Integrate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>