force-app/main/default/objects/Account/fields/Active_SO_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_SO_Count__c</fullName>
    <description>Count of active service standing orders.</description>
    <label>Active SO Count</label>
    <summaryFilterItems>
        <field>Standing_Order__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Standing_Order__c.Order_Number__c</field>
        <operation>startsWith</operation>
        <value>S</value>
    </summaryFilterItems>
    <summaryForeignKey>Standing_Order__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>