force-app/main/default/objects/Account/fields/Add_to_Call_Block__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Call_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify accounts to appear in the call block list. Once account has been contacted, checkbox should be set to unchecked.</description>
    <inlineHelpText>Used to identify accounts to appear in the call block list. Once account has been contacted, checkbox should be set to unchecked.</inlineHelpText>
    <label>Add to Call Block</label>
    <type>Checkbox</type>
</CustomField>