force-app/main/default/objects/Account/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>IF( ISBLANK( ParentId ) , 
  BillingStreet &amp; &quot; &quot; &amp; BillingCity &amp;  &quot; &quot; &amp; BillingState &amp; &quot; &quot; &amp;  BillingPostalCode &amp; &quot; &quot; &amp;  BillingCountry , 
  Parent.BillingStreet &amp; &quot; &quot; &amp; Parent.BillingCity &amp;  &quot; &quot; &amp; Parent.BillingState &amp; &quot; &quot; &amp;  Parent.BillingPostalCode &amp; &quot; &quot; &amp;  Parent.BillingCountry)</formula>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>