force-app/main/default/objects/Account/fields/BMCServiceDesk__Active__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Active__c</fullName>
    <label>Active Account (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>