force-app/main/default/objects/Account/fields/BMCServiceDesk__Business_Hour__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Business_Hour__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>