force-app/main/default/objects/Account/fields/BMCServiceDesk__costCenter__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__costCenter__c</fullName>
    <label>Cost Center</label>
    <length>100</length>
    <type>Text</type>
</CustomField>