force-app/main/default/objects/Account/fields/BMCServiceDesk__FKSelfService_Theme__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSelfService_Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to store branding theme set by admin for Self Service 2.0</description>
    <label>SelfService Theme</label>
    <referenceTo>BMCServiceDesk__SelfService_Theme__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>