force-app/main/default/objects/Account/fields/BMCServiceDesk__Remedyforce_Account__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Remedyforce_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remedyforce Account</label>
    <type>Checkbox</type>
</CustomField>