force-app/main/default/objects/Account/fields/BMCServiceDesk__ServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ServiceProvider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ServiceProvider</label>
    <type>Checkbox</type>
</CustomField>