force-app/main/default/objects/Account/fields/CCC_Account__c.field-meta.xml
<CustomField>
    <fullName>CCC_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For identifying CCC Accounts</description>
    <label>CCC Account</label>
    <type>Checkbox</type>
</CustomField>