force-app/main/default/objects/Account/fields/Chain_ID__c.field-meta.xml
<CustomField>
    <fullName>Chain_ID__c</fullName>
    <description>Maps to &quot;CHAINID&quot; field in ERP.</description>
    <label>Chain ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>