force-app/main/default/objects/Account/fields/Chargeable_Chem__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Chem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to when account is chargeable for chemical services</description>
    <inlineHelpText>Used to when account is chargeable for chemical services</inlineHelpText>
    <label>Chargeable Chem</label>
    <type>Checkbox</type>
</CustomField>