force-app/main/default/objects/Account/fields/Chargeable_Chem_Status__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Chem_Status__c</fullName>
    <formula>IF(Chargeable_Chem__c = true, IMAGE(&quot;/resource/ChargeableChem&quot;, &quot;Active&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chargeable Chem Status</label>
    <type>Text</type>
</CustomField>