force-app/main/default/objects/Account/fields/Chemical_Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Operating_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chemical Operating Hours</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Accounts (Chemical Operating Hours)</relationshipLabel>
    <relationshipName>Accounts_Chemical</relationshipName>
    <type>Lookup</type>
</CustomField>