force-app/main/default/objects/Account/fields/Chemical_OperatingHoursId__c.field-meta.xml
<CustomField>
    <fullName>Chemical_OperatingHoursId__c</fullName>
    <formula>BLANKVALUE( Chemical_Operating_Hours__c , OperatingHoursId )</formula>
    <label>Chemical OperatingHoursId</label>
    <type>Text</type>
</CustomField>