force-app/main/default/objects/Account/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Competitors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abell</fullName>
            </value>
            <value>
                <fullName>Bio-Chem</fullName>
            </value>
            <value>
                <fullName>Canadian Linen</fullName>
            </value>
            <value>
                <fullName>Cannon</fullName>
            </value>
            <value>
                <fullName>Cintas</fullName>
            </value>
            <value>
                <fullName>Diversey</fullName>
            </value>
            <value>
                <fullName>Ecolab</fullName>
            </value>
            <value>
                <fullName>GK</fullName>
            </value>
            <value>
                <fullName>Groupe Cameron</fullName>
            </value>
            <value>
                <fullName>Magical Pest Control</fullName>
            </value>
            <value>
                <fullName>Maheu Maheu</fullName>
            </value>
            <value>
                <fullName>Orkin</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Regionex</fullName>
            </value>
            <value>
                <fullName>Rentokill</fullName>
            </value>
            <value>
                <fullName>Rochester Midland</fullName>
            </value>
            <value>
                <fullName>Roy Turk</fullName>
            </value>
            <value>
                <fullName>Sani Sol</fullName>
            </value>
            <value>
                <fullName>Steritech</fullName>
            </value>
            <value>
                <fullName>Swish</fullName>
            </value>
            <value>
                <fullName>Unifirst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>