force-app/main/default/objects/Account/fields/Consolidated_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consolidated Invoicing</label>
    <type>Checkbox</type>
</CustomField>