force-app/main/default/objects/Account/fields/Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Address__c</fullName>
    <inlineHelpText>Used for storing additional contact email address in Accpac</inlineHelpText>
    <label>A/P Contact Email Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>