force-app/main/default/objects/Account/fields/Contract_Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Initiation_Date__c</fullName>
    <inlineHelpText>This is mapped to Start Date in Runs Database.  Only an administrator can update this information.</inlineHelpText>
    <label>Contract Initiation Date</label>
    <type>Date</type>
</CustomField>