force-app/main/default/objects/Account/fields/Contract_Price_Hold__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price_Hold__c</fullName>
    <inlineHelpText>Select &quot;Request Approval&quot; and click on &quot;Submit For Approval&quot; if this account should have a price hold.  A notification will be sent to your manager and they can approve this.</inlineHelpText>
    <label>Contract Price Hold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Price Hold</fullName>
                <default>true</default>
                <label>No Price Hold</label>
            </value>
            <value>
                <fullName>Request Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>