force-app/main/default/objects/Account/fields/Contract_Price_Hold_Approved__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price_Hold_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This can only be checked via an Approval Process. (Or your manager can edit this field)</inlineHelpText>
    <label>Contract Price Hold Approved</label>
    <type>Checkbox</type>
</CustomField>