force-app/main/default/objects/Account/fields/CPL_Code__c.field-meta.xml
<CustomField>
    <fullName>CPL_Code__c</fullName>
    <label>CPL Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>