force-app/main/default/objects/Account/fields/CPQ2_CSBSM__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_CSBSM__c</fullName>
    <description>Stamped from model</description>
    <label>Cost/Stop Before Service &amp; Material</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>