force-app/main/default/objects/Account/fields/CPQ2_DAF__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_DAF__c</fullName>
    <description>Stamped from model</description>
    <label>Distance Adjustment Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>