force-app/main/default/objects/Account/fields/CPQ2_DOR__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_DOR__c</fullName>
    <label>Direct Cost of Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>