force-app/main/default/objects/Account/fields/CPQ2_GM__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_GM__c</fullName>
    <description>This is the Gross Margin Dollar Amount.</description>
    <formula>CPQ2_TOAR__c - ((CPQ2_CSBSM__c * CPQ2_DAF__c * CPQ2_HF__c) + CPQ2_TOAC__c + (CPQ2_TOAR__c * CPQ2_DOR__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>