force-app/main/default/objects/Account/fields/CPQ2_GMP__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_GMP__c</fullName>
    <description>This is the Gross Margin in Percentage</description>
    <formula>CPQ2_GM__c / If( CPQ2_TOAR__c = 0, 1, CPQ2_TOAR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>