force-app/main/default/objects/Account/fields/CPQ2_HF__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_HF__c</fullName>
    <description>Highest # of visits across all orders</description>
    <label>Highest Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>