force-app/main/default/objects/Account/fields/CPQ2_HSO__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_HSO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Seasonal Order</label>
    <type>Checkbox</type>
</CustomField>