force-app/main/default/objects/Account/fields/CPQ2_STS__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_STS__c</fullName>
    <description>This is the Ship To Score for this Account</description>
    <formula>if( CPQ2_HSO__c || CPQ2_GM__c == 0, null, ROUND((CPQ2_GMP__c + $Setup.CPQ_Settings__c.CPQ_Deal_Score_Buffer__c)*100,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>