force-app/main/default/objects/Account/fields/CPQ2_TOAC__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_TOAC__c</fullName>
    <description>Sum of the Order  Annual order cost (service + material)</description>
    <label>Total Order Annual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>