force-app/main/default/objects/Account/fields/CPQ2_TOAR__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_TOAR__c</fullName>
    <description>Sum of the Order  Annual order revenues</description>
    <label>Total Order Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>