force-app/main/default/objects/Account/fields/Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check__c</fullName>
    <label>Credit Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Checked</fullName>
                <default>true</default>
                <label>Not Checked</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>