force-app/main/default/objects/Account/fields/Credit_Check_Case__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Check Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>