force-app/main/default/objects/Account/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <defaultValue>$Setup.Quote_Settings__c.Default_Credit_Limit__c</defaultValue>
    <label>Credit Limit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>