force-app/main/default/objects/Account/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <formula>IF( 
  ( Inactive__c   ||   On_Hold__c ||  Parent.Inactive__c || Parent.On_Hold__c ),
  IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;),
  IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) 
)</formula>
    <label>Credit Status</label>
    <type>Text</type>
</CustomField>