force-app/main/default/objects/Account/fields/Current_Year_To_Date_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_To_Date_Sales__c</fullName>
    <inlineHelpText>Current year to date sales imported from AccPac</inlineHelpText>
    <label>Current Year To Date Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>