force-app/main/default/objects/Account/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <formula>IF(ISBLANK(Service_Territory__c), &quot;0000&quot;, LEFT(TEXT(Service_Territory__r.Location__c), 3)  &amp; &quot;0&quot;)</formula>
    <inlineHelpText>Takes the Location (Group Code) from Service Territory for integration.  If there is no Service Territory for whatever reason we will default to &quot;0000&quot;.</inlineHelpText>
    <label>Customer Group</label>
    <type>Text</type>
</CustomField>