force-app/main/default/objects/Account/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <formula>IF(

Inactive__c = TRUE, 

IMAGE(&apos;/resource/Customer_Status_Inactive_image2&apos;, &quot;Inactive&quot;), 

IF(

AND(On_Hold__c = TRUE) , 

IMAGE(&apos;/resource/Customer_Status_OnHold_image2&apos;, &quot;On Hold&quot;),

IF(

AND( PestPac__c = TRUE,ISPICKVAL(Use_Distributor__c,&apos;Yes&apos;)),

&quot; &quot;,

IF(

AND( PestPac__c = TRUE, VMI__c = FALSE),

IMAGE(&apos;/resource/ActivePestPac&apos;,&quot;Active PestPac&quot;),

IF(

AND(ISPICKVAL(Use_Distributor__c,&apos;Yes&apos;), VMI__c = false), 

IMAGE(&apos;/resource/ActiveDist&apos;,&quot;Active Dist&quot;),

IF(

AND(ISPICKVAL(Use_Distributor__c,&apos;Yes&apos;), VMI__c = TRUE),

IMAGE(&apos;/resource/Customer_Status_Active_DIST_VMI&apos;,&quot;Active DIST VMI&quot;),

IF(

AND(VMI__c = TRUE, PestPac__c = FALSE), 

IMAGE(&apos;/resource/Customer_Status_Active_VMI&apos; ,&quot;Active VMI&quot;),

IF(

AND(PestPac__c = TRUE, VMI__c = TRUE), 

IMAGE(&apos;/resource/Customer_Status_Active_VMI_PestPac&apos;,&quot;Active VMI PestPac&quot;),

IMAGE(&apos;/resource/Customer_Status_Active_image5&apos;, &quot;Active&quot;)))))))))</formula>
    <label>Customer Status</label>
    <type>Text</type>
</CustomField>