force-app/main/default/objects/Account/fields/Customer_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tiers__c</fullName>
    <description>Fields in this picklist must correspond to values in the Work Order &quot;Custom Priority&quot; formula.</description>
    <inlineHelpText>This will impact scheduling of work orders</inlineHelpText>
    <label>Customer Tiers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>