force-app/main/default/objects/Account/fields/Desired_Invoice_Preference__c.field-meta.xml
<CustomField>
    <fullName>Desired_Invoice_Preference__c</fullName>
    <description>Created to display English / French picklist values within the DocuSign Invoicing and Payment Options Form template.  Selections within the DocuSign template are written back to Salesforce and then updates Invoice Preference Account field via process builder.</description>
    <label>Desired Invoice Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email / Courriel</fullName>
            </value>
            <value>
                <fullName>Mail / Courrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>