force-app/main/default/objects/Account/fields/Desired_PO_Required_for_Orders__c.field-meta.xml
<CustomField>
    <fullName>Desired_PO_Required_for_Orders__c</fullName>
    <description>Created to display English / French picklist values within the DocuSign Invoicing and Payment Options Form template.  Selections within the DocuSign template are written back to Salesforce and then updates PO Required for Orders field via process builder.</description>
    <label>Desired PO Required for Orders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO required before / BC requis avant</fullName>
            </value>
            <value>
                <fullName>PO required after / BC requis après</fullName>
            </value>
            <value>
                <fullName>No / Non</fullName>
            </value>
            <value>
                <fullName>None / Aucun</fullName>
                <isActive>false</isActive>
                <label>None / Aucun</label>
            </value>
            <value>
                <fullName>Yes / Oui</fullName>
                <isActive>false</isActive>
                <label>Yes / Oui</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>