force-app/main/default/objects/Account/fields/Desired_PO_Required_for_Orders_Temp__c.field-meta.xml
<CustomField>
    <fullName>Desired_PO_Required_for_Orders_Temp__c</fullName>
    <description>Created to display English / French picklist values within the DocuSign Invoicing and Payment Options Form template. Selections within the DocuSign template are written back to Salesforce and then updates PO Required for Orders field via process builder.

Temporary and to be deleted once PO Required for Orders is switched to a picklist field.</description>
    <label>Desired PO Required for Orders Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes / Oui</fullName>
            </value>
            <value>
                <fullName>No / Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>