force-app/main/default/objects/Account/fields/Detailing_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Detailing_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked customer would be able to see both Work Order and Line Items on the portal. If not customer would only see the Work Order as a proof of work completed</inlineHelpText>
    <label>Reporting Detail</label>
    <type>Checkbox</type>
</CustomField>