force-app/main/default/objects/Account/fields/Do_Not_Update_Address_on_Orders__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_Address_on_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Update Address on Orders</label>
    <type>Checkbox</type>
</CustomField>