force-app/main/default/objects/Account/fields/Do_Not_Update_Address_on_Orders_Parent__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_Address_on_Orders_Parent__c</fullName>
    <formula>Parent.Do_Not_Update_Address_on_Orders__c</formula>
    <inlineHelpText>Refers to the &quot;Do Not Update Address on Orders&quot; on the Parent Account.</inlineHelpText>
    <label>Do Not Update Address on Orders (Parent)</label>
    <type>Checkbox</type>
</CustomField>