force-app/main/default/objects/Account/fields/Email_Notification_Options__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_Options__c</fullName>
    <label>Email Notification Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24 Hours</fullName>
            </value>
            <value>
                <fullName>48 Hours</fullName>
            </value>
            <value>
                <fullName>No Notification</fullName>
                <default>true</default>
                <label>No Notification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>