force-app/main/default/objects/Account/fields/End_Warranty_date__c.field-meta.xml
<CustomField>
    <fullName>End_Warranty_date__c</fullName>
    <inlineHelpText>Last end date of all service warranties on this account</inlineHelpText>
    <label>End Warranty Date</label>
    <summarizedField>Warranty__c.Warranty_End__c</summarizedField>
    <summaryForeignKey>Warranty__c.Ship_To__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>